# nfc_attendance

./: .env.example  .gitattributes  .gitignore  README.md  main.py  memo  pyproject.toml  pyrefly.toml
.github/: copilot-instructions.md
app/: admin_session.py  config.py  db.py  deps.py  env.py  exceptions.py  kiosk.py  main.py  realtime.py  touch_panel.py
app/domain/: enums.py  pending_touch.py  rules.py  state_machine.py  time_utils.py
app/models/: __init__.py  attendance_event.py  attendance_session.py  attendance_status.py  audit_log.py  break_period.py  student.py  unknown_card_log.py
app/repositories/: attendance_repository.py  audit_repository.py  student_repository.py  (+1 more)
arc/: memo  pyproject.toml
arc/src/: db.py  (+1 more)
data/: attendance.db
docs/: IMPLEMENTATION_REFERENCE.md  UNIFIED_IMPLEMENTATION_SPEC.md  codex_prompts_nfc_attendance.md
reader/: client.py  debounce.py  main.py  nfc.py
src/: attendance_gui.py  attendance_reader.py  calc_time.py  db.py  log_config.py  report_time.py
systemd/: gui.service
test/: test_attendance_reader.py  test_db.py
tests/: conftest.py  test_attendance_repository.py  test_attendance_service.py  test_audit_repository.py  test_auth.py  test_correction_service.py  test_error_handling.py  test_export_csv.py  test_models_smoke.py  test_pages.py  test_pending_touch.py  test_reader_api.py  test_reader_client.py  test_reader_debounce.py  test_reader_main.py  test_reader_nfc.py  test_state_machine.py  test_student_repository.py  test_student_service.py  test_students_api.py  test_time_utils.py  test_unknown_card_repository.py
(+38 files in other folders)
