[project]
name = "nfc-attendance-server"
version = "0.1.0"
description = "NFC attendance management server"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "pydantic>=2.11.0",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.22",
  "sqlalchemy>=2.0.41",
  "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0",
  "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
